[package]
name = "functora"
license = "MIT"
version = "0.1.0"
edition = "2024"
keywords = ["functional-programming", "prelude"]
categories = ["functional-programming", "prelude"]
repository = "https://github.com/functora/functora.github.io/tree/master/rust/functora"
documentation = "https://docs.rs/functora"
description = "Missing pieces of the Rust standard library."

[dependencies]
