cabal-version: 2.4
author:        functora
build-type:    Simple
category:      Data
copyright:     functora
description:   Custom prelude
license:       BSD-3-Clause
maintainer:    functora@proton.me
name:          functora-acme
synopsis:      Custom prelude
version:       0.1.0.0
homepage:
  https://github.com/functora/functora.github.io/tree/master/pub/functora

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_functora_acme
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode
      -Wno-missing-kind-signatures

  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          pkg
  hs-source-dirs:  aes prelude qr
  build-depends:
    , base
    , base16-bytestring
    , base64-bytestring
    , bmp
    , bytestring
    , Crypto
    , cryptohash-sha256
    , lens
    , pkcs7
    , qrcode-core
    , syb
    , tagged
    , text
    , universum
    , vector
    , witch-mini

  exposed-modules:
    Functora.Aes
    Functora.Prelude
    Functora.Qr
