cabal-version: 2.4
author:        functora
build-type:    Simple
category:      Data
copyright:     functora
description:   Custom prelude
license:       BSD-3-Clause
maintainer:    functora@proton.me
name:          functora-ghcjs
synopsis:      Custom prelude
version:       0.1.0.0
homepage:
  https://github.com/functora/functora.github.io/tree/master/pub/functora

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_functora_ghcjs
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          pkg
  hs-source-dirs:  prelude qr aes money web rates tags
  build-depends:
    , aeson
    , aeson-combinators
    , async
    , base
    , base16-bytestring
    , base64-bytestring
    , bmp
    , bytestring
    , containers
    , Crypto
    , cryptohash-sha256
    , extra
    , generic-lens
    , lens
    , lift-type
    , microlens
    , microlens-contra
    , microlens-ghc
    , microlens-th
    , modern-uri
    , monad-chronicle
    , network-uri
    , pkcs7
    , qrcode-core
    , safe-exceptions
    , scientific
    , singlethongs
    , stm
    , syb
    , tagged
    , template-haskell
    , text
    , th-lift-instances
    , these
    , these-lens
    , time
    , type-level-sets
    , unbounded-delays
    , universum
    , unliftio
    , vector
    , witch-mini
    , with-utf8

  if !impl(ghcjs)
    build-depends:
      , http-client
      , http-client-tls
      , http-types
      , streaming-commons
      , yesod-core

  else
    build-depends: ghcjs-base

  exposed-modules:
    Functora.Aes
    Functora.Money
    Functora.MoneyFgpt
    Functora.MoneySing
    Functora.Prelude
    Functora.PreludeOrphan
    Functora.Qr
    Functora.Rates
    Functora.Tags
    Functora.Web
    Functora.WebOrphan

  other-modules:
    Functora.TagsFamily
    Functora.TagsOrphan
