cabal-version: 2.4
author:        functora
build-type:    Simple
category:      Data
copyright:     functora
description:   Custom prelude
license:       BSD-3-Clause
maintainer:    functora@proton.me
name:          functora-ghcjs
synopsis:      Custom prelude
version:       0.1.0.0
homepage:
  https://github.com/functora/functora.github.io/tree/master/pub/functora

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_functora_ghcjs
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  if impl(ghc >=9.10)
    ghc-options:
      -Wno-missing-role-annotations -Wno-operator-whitespace
      -Wno-missing-poly-kind-signatures

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , aeson
    , aeson-combinators
    , async
    , base
    , base16-bytestring
    , base58-bytestring
    , base64-bytestring
    , binary
    , binary-instances
    , bmp
    , bytestring
    , containers
    , Crypto
    , extra
    , generic-lens
    , lens
    , lift-type
    , microlens
    , microlens-contra
    , microlens-ghc
    , microlens-th
    , modern-uri            >=0.3.4.4
    , monad-chronicle
    , network-uri
    , optparse-applicative
    , pkcs7
    , qrcode-core
    , random
    , safe-exceptions
    , scientific
    , singlethongs
    , stm
    , syb
    , tagged
    , template-haskell
    , text
    , th-lift-instances
    , these
    , these-lens
    , time
    , tomland
    , transformers
    , type-level-sets
    , unbounded-delays
    , uniplate
    , universum
    , unliftio
    , vector
    , witch-mini
    , with-utf8

  if impl(ghcjs)
    build-depends: ghcjs-base

  if os(wasi)
    build-depends:
      , ghcjs-dom
      , http-media
      , servant
      , servant-jsaddle

  if !(impl(ghcjs) || os(wasi))
    build-depends:
      , http-client
      , http-client-tls
      , http-types
      , streaming-commons
      , yesod-core

library
  import:          pkg
  hs-source-dirs:  prelude qr aes money web rates tags cfg
  exposed-modules:
    Functora.Aes
    Functora.AesOrphan
    Functora.Cfg
    Functora.CfgOrphan
    Functora.Money
    Functora.MoneySing
    Functora.Prelude
    Functora.PreludeOrphan
    Functora.Qr
    Functora.Rates
    Functora.Tags
    Functora.Web
    Functora.WebOrphan

  other-modules:
    Functora.TagsFamily
    Functora.TagsOrphan

test-suite functora-ghcjs-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: prelude qr aes money web rates tags cfg elm2miso soplate
  hs-source-dirs: test
  build-depends:
    , base
    , bytestring
    , containers
    , cryptohash-sha256
    , generics-sop
    , hspec
    , modern-uri
    , qrcode-core
    , QuickCheck
    , quickcheck-instances
    , regex-compat
    , string-qq
    , text
    , universum

  other-modules:
    Functora.AesSpec
    Functora.CfgSpec
    Functora.Elm2MisoSpec
    Functora.PreludeSpec
    Functora.QrSpec
    Functora.RatesSpec
    Functora.Tags.TestFgpt
    Functora.Tags.TestSing
    Functora.TagsSpec

  other-modules:
    Functora.Aes
    Functora.AesOrphan
    Functora.Cfg
    Functora.CfgOrphan
    Functora.Elm2Miso
    Functora.Money
    Functora.MoneySing
    Functora.Prelude
    Functora.PreludeOrphan
    Functora.Qr
    Functora.Rates
    Functora.Soplate
    Functora.Tags
    Functora.TagsFamily
    Functora.TagsOrphan
    Functora.Web
    Functora.WebOrphan
