cabal-version:      2.4
name:               bitcoin-keys
version:            0.1
license:            Apache-2.0
license-file:       LICENSE
extra-source-files:
  CHANGELOG.md
  README.md

author:             Renzo Carbonara
maintainer:         renλren.zone
copyright:          Copyright (c) Renzo Carbonara 2020
category:           Cryptography
build-type:         Simple
synopsis:           Bitcoin keys
description:
  Bitcoin keys.
  .
  This library builds in GHC and GHCJS.

homepage:           https://gitlab.com/k0001/hs-bitcoin-keys
bug-reports:        https://gitlab.com/k0001/hs-bitcoin-keys/issues
tested-with:
    GHC ==8.6.5 || ==8.8.3
  , GHCJS ==8.6.0

common basic
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -Werror=incomplete-patterns
  ghcjs-options:    -O3 -Wall -Werror=incomplete-patterns
  build-depends:
    , base        >=4 && <5
    , bytestring

library
  import:          basic
  hs-source-dirs:  lib
  exposed-modules: Bitcoin.Keys

  if (impl(ghcjs) || arch(javascript))
    other-modules: Bitcoin.Keys.GHCJS
    build-depends: ghcjs-base

    -- This is file is generated. See README.md.
    js-sources:    js/index.compiled.js

  else
    other-modules: Bitcoin.Keys.GHC
    build-depends: secp256k1-haskell >=1.4.0

test-suite test
  import:         basic
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base16-bytestring
    , bitcoin-keys
    , hedgehog
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , with-utf8
